[package]
name = "only_swing"
version = "0.1.0"
authors = ["Josh Kopelcheck <jokopelchecl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3"
fltk = { version = "^0.7.12", features = ["fltk-bundled"] }